--- a/doc/c64.md
+++ b/doc/c64.md
@@ -17,8 +17,8 @@ adjusting the motor speed.
 The drives were also intelligent and ran DOS on a CPU inside them. The
 computer itself knew nothing about file systems. You could even upload
 programs onto the drive and run them there, allowing all sorts of custom disk
-formats, although this was mostly used to compensate for the [crippling slow
-connection to the
+formats, although this was mostly used to compensate for the [cripplingly
+slow connection to the
 computer](https://ilesj.wordpress.com/2014/05/14/1541-why-so-complicated/) of
 300 bytes per second (!). (The drive itself could transfer data reasonably
 quickly.)
