Disks can now be read, and incremental progress shows up in the summary view.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -9,5 +9,9 @@
     "fluxengine.view.config.fluxfile": "Flux file",
     "fluxengine.view.config.manual": "Manual device setup",
     "fluxengine.view.config.hardwareDevicePath": "Device path",
-    "fluxengine.view.config.highDensity": "High density disk"
+    "fluxengine.view.config.highDensity": "High density disk",
+
+    "fluxengine.summary.controls.read": "Read from device",
+    "fluxengine.summary.controls.write": "Write to device",
+    "fluxengine.summary.controls.stop": "Stop"
 }
