The sector map view is now mostly working.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -16,5 +16,5 @@
     "fluxengine.summary.controls.write": "Write to device",
     "fluxengine.summary.controls.stop": "Stop",
 
-    "fluxengine.view.image.name": "FluxEngine disk image"
+    "fluxengine.view.image.name": "FluxEngine sector map"
 }
