Add custom out-of-box and welcome screen implementations.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -10,6 +10,7 @@
     "fluxengine.view.config.manual": "Manual device setup",
     "fluxengine.view.config.hardwareDevicePath": "Device path",
     "fluxengine.view.config.highDensity": "High density disk",
+    "fluxengine.view.config.rescan": "Rescan",
 
     "fluxengine.view.summary.name":"FluxEngine control panel",
     "fluxengine.summary.controls.read": "Read from device",
