Added functionality for faking the necessary data in a DecodedDisk to make the visualiser work. Blank images can now be created in memory.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -39,7 +39,7 @@
     "fluxengine.view.controlpanel.readImage": "Load disk image",
     "fluxengine.view.controlpanel.writeImage": "Save disk image",
     "fluxengine.view.controlpanel.rereadBad": "Re-read bad tracks",
-    "fluxengine.view.controlpanel.createBlank": "Format disk",
+    "fluxengine.view.controlpanel.createBlank": "Empty filesystem",
     "fluxengine.view.controlpanel.stop": "Stop",
 
     "fluxengine.view.log.name": "FluxEngine log viewer"
