--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -42,5 +42,14 @@
     "fluxengine.view.controlpanel.createBlank": "Empty filesystem",
     "fluxengine.view.controlpanel.stop": "Stop",
 
-    "fluxengine.view.log.name": "FluxEngine log viewer"
+    "fluxengine.view.log.name": "FluxEngine log viewer",
+
+    "fluxengine.view.status.runningSuffix": "...",
+    "fluxengine.view.status.succeededSuffix": "... done",
+    "fluxengine.view.status.failedSuffix": "... failed",
+    "fluxengine.view.status.readDevice": "Reading disk",
+    "fluxengine.view.status.writeDevice": "Writing disk",
+    "fluxengine.view.status.writeFlux": "Writing flux file to disk",
+    "fluxengine.view.status.writeImage": "Writing image file to disk",
+    "fluxengine.view.status.blankFilesystem": "Creating blank filesystem"
 }
