You can now load images.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -50,6 +50,7 @@
     "fluxengine.view.status.readDevice": "Reading disk",
     "fluxengine.view.status.writeDevice": "Writing disk",
     "fluxengine.view.status.writeFlux": "Writing flux file to disk",
+    "fluxengine.view.status.readImage": "Reading image file from disk",
     "fluxengine.view.status.writeImage": "Writing image file to disk",
     "fluxengine.view.status.blankFilesystem": "Creating blank filesystem"
 }
