Move the flux file button into the config area.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -13,6 +13,7 @@
     "fluxengine.view.config.hardwareDevicePath": "Device path",
     "fluxengine.view.config.highDensity": "High density disk",
     "fluxengine.view.config.rescan": "Rescan USB",
+    "fluxengine.view.config.setupFluxFile": "Use flux file",
     "fluxengine.view.config.yes": "yes",
     "fluxengine.view.config.no": "no",
     "fluxengine.view.config.format": "Format",
@@ -34,7 +35,6 @@
     "fluxengine.view.controlpanel.name": "FluxEngine controls",
     "fluxengine.view.controlpanel.readDevice": "Read",
     "fluxengine.view.controlpanel.writeDevice": "Write",
-    "fluxengine.view.controlpanel.readFlux": "Read flux file",
     "fluxengine.view.controlpanel.writeFlux": "Write flux file",
     "fluxengine.view.controlpanel.readImage": "Load disk image",
     "fluxengine.view.controlpanel.writeImage": "Save disk image",
