Rename some stuff.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -47,8 +47,8 @@
     "fluxengine.view.status.runningSuffix": "...",
     "fluxengine.view.status.succeededSuffix": "... done",
     "fluxengine.view.status.failedSuffix": "... failed",
-    "fluxengine.view.status.readDevice": "Reading disk",
-    "fluxengine.view.status.writeDevice": "Writing disk",
+    "fluxengine.view.status.readDevice": "Reading and decoding",
+    "fluxengine.view.status.writeDevice": "Encoding and writing",
     "fluxengine.view.status.writeFlux": "Writing flux file to disk",
     "fluxengine.view.status.readImage": "Reading image file from disk",
     "fluxengine.view.status.writeImage": "Writing image file to disk",
