Looks like we're going to have to rework the reader/writer/source/sink interfaces, so do fluxsink. This lets us test for overwriting a flux file on writing in the GUI. HG: Enter commit message.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -52,5 +52,7 @@
     "fluxengine.view.status.writeFlux": "Writing flux file to disk",
     "fluxengine.view.status.readImage": "Reading image file from disk",
     "fluxengine.view.status.writeImage": "Writing image file to disk",
-    "fluxengine.view.status.blankFilesystem": "Creating blank filesystem"
+    "fluxengine.view.status.blankFilesystem": "Creating blank filesystem",
+
+    "fluxengine.messages.writingFluxToFile": "The current configuration is to write to a flux file rather than to hardware. Is this what you intended?"
 }
