Add a first draft visualiser.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -44,6 +44,8 @@
 
     "fluxengine.view.log.name": "FluxEngine log viewer",
 
+    "fluxengine.view.visualiser.name": "FluxEngine disk visualiser",
+
     "fluxengine.view.status.runningSuffix": "...",
     "fluxengine.view.status.succeededSuffix": "... done",
     "fluxengine.view.status.failedSuffix": "... failed",
