--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -45,7 +45,7 @@
     "fluxengine.view.log.name": "FluxEngine log viewer",
 
     "fluxengine.view.visualiser.name": "FluxEngine disk visualiser",
-    "fluxengine.view.visualiser.missingData": "Missing flux data",
+    "fluxengine.view.visualiser.missingData": "Partial visualisation",
 
     "fluxengine.view.status.runningSuffix": "...",
     "fluxengine.view.status.succeededSuffix": "... done",
