Add a menu option to allow resetting the workspace.

--- a/src/gui2/rsrc/lang/en_US.json
+++ b/src/gui2/rsrc/lang/en_US.json
@@ -57,5 +57,6 @@
     "fluxengine.view.status.writeImage": "Writing image file to disk",
     "fluxengine.view.status.blankFilesystem": "Creating blank filesystem",
 
-    "fluxengine.messages.writingFluxToFile": "The current configuration is to write to a flux file rather than to hardware. Is this what you intended?"
+    "fluxengine.messages.writingFluxToFile": "The current configuration is to write to a flux file rather than to hardware. Is this what you intended?",
+    "fluxengine.menu.workspace.reset": "Reset workspace"
 }
